[FIX] text-ext z-index mess
bzr revid: fme@openerp.com-20120919111151-ii1zu7egypmv1nsc

--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -563,7 +563,7 @@ $sheet-max-width: 860px
         position: absolute
         top: 26px
         left: 0
-        z-index: 1
+        z-index: 3
         margin: 0
         padding: 0
         border: 1px solid $tag-border
